[tool.poetry]
name = "sparkstreamingproject"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.0.3"
numpy = "^1.25.1"
scikit-learn = "^1.3.0"
pyspark = "3.3.0"
kafka-python = "^2.0.2"
confluent-kafka = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
